# futureOS

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
FileSystem/: drink_needs.txt  fadsfads.txt  untitled.txt  walking_how_it_works.txt  whatsupbro.txt
FileSystem/documents/: meeting_notes.txt  personal_tasks.txt  recipes.txt
FileSystem/home/: f1.txt  finances.csv  gift_list.txt  my_diary.txt
FileSystem/home/work/: confidential_company_data.txt  secret_files.txt  secrets.txt
FileSystem/work/: confidential_company_data.txt  secrets.txt
FileSystem/work/Company/: meeting_minutes.txt  project_proposal.txt  quarterly_goals.txt  team_contacts.csv
FileSystem/work/Personal_Projects/: budget_tracker.csv  ideas.txt  workout_log.txt
futureos/: __main__.py
futureos/commands/: __init__.py  answer.py  cat.py  cd.py  cls.py  command.py  index.py  ls.py  nano.py  pwd.py  rm.py  tree.py
futureos/init/: create_collections.py
futureos/utils/: editor.py  path_utils.py
src/: __main__.py  main.py
src/commands/: __init__.py  answer.py  cat.py  cd.py  command.py  index.py  ls.py  nano.py  pwd.py  rm.py
src/init/: create_collections.py
src/utils/: get_all_paths.py  path_utils.py
tests/: test_create_collections.py
