[project]
name = "futureos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.18",
    "langchain-community>=0.3.5",
    "langchain-ollama>=0.2.0",
    "langchain>=0.3.7",
    "loguru>=0.7.2",
    "ollama>=0.3.3",
    "rich>=13.9.4",
]

[[tool.uv.index]]
url = "https://artifactory-espoo1.int.net.nokia.com/artifactory/api/pypi/rfsw-pypi-virtual/simple"
default = true
